--- a/src/components/boxSetup/style.css
+++ b/src/components/boxSetup/style.css
@@ -5,11 +5,12 @@
     border: 1px solid rgb(64, 64, 216);
     border-radius: 10px;
     padding: 20px 0;
+    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
 }
 .title{
    text-align: center;
    margin: 0;
-   margin-bottom: 10px;
+   margin-bottom: 35px;
 }
 .list_inf{
     margin: 0;
@@ -17,9 +18,18 @@
     font-size: 20px;
     list-style: none;
     padding: 0 ;
+    outline: 0;
+    border: 0;
+    width: 100%;
+    min-height: 300px;
+    height: auto;
+    overflow: auto;
 }
 .inf{
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-bottom: 1px solid rgb(64, 64, 216);
+    cursor: pointer;
+    height: 30px;
+    vertical-align: text-bottom;
 }
