--- a/src/components/selectDashboard/style.css
+++ b/src/components/selectDashboard/style.css
@@ -1,16 +1,20 @@
 .input_select_dashboard{
-    width: 30%;
-    margin-inline: 3%;
-    height: 40px;
+    width: 10%;
+    margin-inline: 5%;
+    height: 30px;
     background-color: transparent;
     border: 0;
-    color: black;
-    font-size: 20px;
+    color: rgb(64, 64, 216);
+    font-size: 14px;
     display: flex;
     text-align: center;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(64, 64, 216);
 }
 .select_dashboard{
     outline: 0;
     border: 0;
+    
+}
+.select_dashboard:hover{
+    color: rgb(28, 128, 216);
 }
