--- a/src/pages/endProcess/style.css
+++ b/src/pages/endProcess/style.css
@@ -1,3 +1,4 @@
+
 .container_page_endProcess{
     min-height: 70vh;
     height: auto;
@@ -13,8 +14,10 @@
     display: flex;
     justify-content: center;
     border-bottom: 1px solid  rgb(64, 64, 216);
-    font-size: 20px;
-    margin-bottom: 5%;
+    color: rgb(64, 64, 216);
+    font-size: 13px;
+    margin-bottom: 3%;
+    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
 }
 .container_cards_horizontal{
     display: flex;
@@ -23,11 +26,6 @@
     margin: 0;
     height: auto;
     justify-content: center;
+    width: 90%;
 }
-.container_cards_vertical{
-    display: flex;
-    height: auto;
-    padding: 0;
-    margin: 0;
-    justify-content: center;
-}
+
