--- a/src/components/cardLog/style.css
+++ b/src/components/cardLog/style.css
@@ -94,7 +94,7 @@
     justify-content: center;
     align-items: center;
     font-size: 28px;
-    overflow: scroll;
+    overflow: hidden;
     margin-inline:1%;
     color:  white;
     font-size: 20px;
