--- a/src/components/cardLog/style.css
+++ b/src/components/cardLog/style.css
@@ -32,9 +32,9 @@
     height: 40%;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
-    overflow: hidden;
 }
 .container_title_box_card_inf_log{
+    width: 100%;
     height: 26%;
     background-color:  rgb(64, 64, 216);
     color: white;
@@ -42,22 +42,31 @@
     justify-content: center;
     align-items: center;
     font-size: 14px;
-    padding: 5px;
-
+    
 }
 .title_box_card_inf_log{
     margin: 0;
     text-align: center;
 }
 .container_val_box_card_inf_log{
-    overflow: auto;
-    height: 80%;
-    padding: 0px 10px;
-    word-wrap: break-word;
+    height: 74%;
+    width: 100%;
+    overflow: scroll;
+    overflow-wrap: break-word;
     font-size: 43px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.val_box_card_inf_log{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-wrap: break-word;
+    
 }
 .container_icon_log{
     width: 40%;
@@ -81,11 +90,13 @@
     flex-direction: column;
 }
 .title_card{
-    padding: 0;
     margin: 0;
     color: white;
     font-size: 16px;
-    text-align: center;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: end;
 }
 .container_content_card{
     width: 100%;
@@ -94,14 +105,18 @@
     justify-content: center;
     align-items: center;
     font-size: 28px;
-    overflow: hidden;
+    overflow:hidden;
     margin-inline:1%;
     color:  white;
-    font-size: 20px;
     border-top: 1px solid white;
-
+    overflow-wrap: break-word;
 }
 
 .val{
     margin: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
