--- a/src/pages/confSetup/style.css
+++ b/src/pages/confSetup/style.css
@@ -20,9 +20,10 @@
 .container_form_setup{
     width: 90%;
     margin-block: 4%;
+    display: flex;
 }
 .input_text_setup{
-    width: 30%;
+    width: 25%;
     height: 40px;
     border: 0;
     border-bottom: 1px solid rgb(64, 64, 216);
@@ -30,11 +31,23 @@
     margin-right: 2%;
 }
 .input_select_setup{
-    width: 30%;
-    height: 40px;
+    width: 25%;
+    height: 42.5px;
     border: 0;
     border-bottom: 1px solid  rgb(64, 64, 216);
     margin-right: 3%;
     background-color: transparent;
     cursor: pointer;
+}
+.input_checkbox_setup{
+    width: 13%;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    margin-left: 3%;
+}
+.label_box{
+    margin-left: 10%;
+    font-size: 15px;
+    text-align: center;
 }
