--- a/src/components/cardLog/style.css
+++ b/src/components/cardLog/style.css
@@ -57,9 +57,9 @@
     font-size: 43px;
 }
 .val_box_card_inf_log{
-    margin: 0;
-    width: 100%;
-    height: 100%;
+    margin: auto;
+    width: auto;
+    max-width:  100%;
     display: flex;
     flex-direction: column;
 }
