--- a/src/components/menu/style.css
+++ b/src/components/menu/style.css
@@ -1,35 +1,49 @@
-.container_menu{
-    width: 100%;
-    height: 80px;
-    background-color: rgb(64, 64, 216);
-    display: flex;
-    
+.container_menu {
+  width: 100%;
+  height: 80px;
+  background-color: rgb(64, 64, 216);
+  display: flex;
 }
-.container_icon{
-    width: 15%;
-    height: 100%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.container_icon {
+  width: 25%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.container_nav_menu{
-    width: 90%;
-    height: 100%;
-    display: flex;
+
+.navbar {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  background-color: rgb(64, 64, 216);
+  padding-right: 5%;
+  justify-content: end;
+  align-items: center;
 }
-.content_nav_menu{
-    display: flex;
-    padding-right: 5%;
-    width: 100%;
-    justify-content: end;
-    align-items: center;
+.nav-item {
+  display: flex;
+  align-items: center;
+  font-size: 22px;
+  margin-right: 2%;
+  font-weight: 500;
+  height: 100%;
+  color: aliceblue;
+  text-decoration: none;
+  padding: 10px;
+  margin-right: 30px;
+  text-decoration: inherit;
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+  transition: background-color 0.3s, color 0.3s;
 }
-.links_menu{
-    font-size: 22px;
-    margin-right: 2%;
-    font-weight: 500;
-    color: aliceblue;
-    text-decoration: inherit;
-    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+
+.nav-item:hover {
+  background-color: white;
+  color: rgb(64, 64, 216);
+}
+
+.nav-item.active {
+  background-color: white;
+  color: rgb(64, 64, 216);
 }
