--- a/src/pages/confSetup/style.css
+++ b/src/pages/confSetup/style.css
@@ -1,53 +1,56 @@
-.container_page_setup{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container_page_setup {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.container_box_conf{
-    min-width: 70%;
-    min-height: 80%;
-    border-radius: 5%;
-    margin: 40px 0;
-    padding: 1% 3%;
-    border: 1px solid rgb(64, 64, 216);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+.container_box_conf {
+  min-width: 70%;
+  min-height: 80%;
+  border-radius: 5%;
+  margin: 40px 0;
+  padding: 1% 3%;
+  border: 1px solid rgb(64, 64, 216);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
 }
-.container_form_setup{
-    width: 90%;
-    margin-block: 4%;
-    display: flex;
+.container_form_setup {
+  width: 90%;
+  margin-block: 4%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
 }
-.input_text_setup{
-    width: 25%;
-    height: 40px;
-    border: 0;
-    border-bottom: 1px solid rgb(64, 64, 216);
-    outline: 0;
-    margin-right: 2%;
+.input_text_setup {
+  width: 25%;
+  height: 40px;
+  border: 0;
+  border-bottom: 1px solid rgb(64, 64, 216);
+  outline: 0;
+  margin-right: 2%;
 }
-.input_select_setup{
-    width: 25%;
-    height: 42.5px;
-    border: 0;
-    border-bottom: 1px solid  rgb(64, 64, 216);
-    margin-right: 3%;
-    background-color: transparent;
-    cursor: pointer;
+.input_select_setup {
+  width: 25%;
+  height: 42.5px;
+  border: 0;
+  border-bottom: 1px solid rgb(64, 64, 216);
+  margin-right: 3%;
+  background-color: transparent;
+  cursor: pointer;
 }
-.input_checkbox_setup{
-    width: 13%;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    margin-left: 3%;
+.input_checkbox_setup {
+  width: 13%;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  margin-left: 3%;
 }
-.label_box{
-    margin-left: 10%;
-    font-size: 15px;
-    text-align: center;
+.label_box {
+  margin-left: 10%;
+  font-size: 15px;
+  text-align: center;
 }
