--- a/src/components/status/style.css
+++ b/src/components/status/style.css
@@ -1,16 +1,28 @@
-.status{
-    display: flex;
-    justify-content: center;
+.status {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.container_inf_status{
-    display: flex;
-    justify-content: center;
-    width: 35.33%;
+.container_inf_status {
+  display: flex;
+  justify-content: center;
+  width: 35.33%;
+  margin-left: 22px;
 }
-.text_status{
-    margin-right: 5%;
-    font-size: 18px;
+.text_status {
+  margin-right: 5%;
+  font-size: 20px;
+  color: #4443ce;
+  font-weight: 700;
 }
-.icon_status{
-    margin-right: 5%;
+.icon_status {
+  margin-right: 5%;
+}
+
+.container_box {
+  border: 1px solid #f3f3ff;
+  background-color: #f3f3ff;
+  border-radius: 8px;
+  padding: 5px;
+  margin-bottom: 5px;
 }
