--- a/src/pages/confSetup/style.css
+++ b/src/pages/confSetup/style.css
@@ -5,25 +5,27 @@
   align-items: center;
 }
 .container_box_conf {
-  min-width: 70%;
-  min-height: 80%;
-  border-radius: 5%;
+  min-width: 60%;
+  min-height: 75vh;
+  height: fit-content;
+  border-radius: 40px !important;
   margin: 40px 0;
   padding: 1% 3%;
-  border: 1px solid rgb(64, 64, 216);
+  background-color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
 }
+
 .container_form_setup {
   width: 90%;
-  margin-block: 4%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px 0;
+  padding: 5px 0;
+  margin-bottom: 4%;
 }
 .input_text_setup {
   width: 25%;
@@ -53,4 +55,31 @@
   margin-left: 10%;
   font-size: 15px;
   text-align: center;
+}
+
+.container_box_status {
+  min-width: 60%;
+  height: fit-content;
+  min-height: 75vh;
+  border-radius: 40px !important;
+  background-color: #ffffff;
+  padding: 1% 3%;
+  margin: 40px 0;
+}
+
+.buttonInitSetup {
+  width: 60%;
+}
+
+.container_btn_setup {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  margin-top: 30px;
+}
+
+.text_field_size {
+  width: 80%;
+  height: fit-content;
 }
