--- a/src/components/loading/style.css
+++ b/src/components/loading/style.css
@@ -1,8 +1,9 @@
-.container_icon_loading{
-    width: 20px;
-    height: 21px;
-    padding: 0;
-    border-radius: 80px;
-    display: flex;
-    justify-content: center;
+.container_icon_loading {
+  width: 20px;
+  height: 21px;
+  padding: 0;
+  border-radius: 80px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
