--- a/src/components/cardLog/style.css
+++ b/src/components/cardLog/style.css
@@ -1,16 +1,3 @@
-.container_card_log {
-  height: 115px;
-  width: 20%;
-  margin-inline: 6%;
-  padding: 0%;
-  display: flex;
-  margin-bottom: 5%;
-  border-radius: 10px;
-  overflow: hidden;
-  transition: 0.2s;
-  cursor: pointer;
-  border: 0;
-}
 .container_card_log:hover {
   scale: 1.1;
 }
@@ -40,7 +27,7 @@
   justify-content: center;
   align-items: center;
   font-size: 14px;
-  border-radius: 1px;
+  border-radius: 10px;
 }
 .title_box_card_inf_log {
   margin: 0;
@@ -61,47 +48,6 @@
   max-width: 100%;
   display: flex;
   flex-direction: column;
-}
-.container_inf {
-  height: 100%;
-  width: 100%;
-}
-.container_header_card {
-  background-color: rgb(64, 64, 216);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  flex-direction: column;
-}
-.title_card {
-  margin: 0;
-  color: white;
-  font-size: 16px;
-  height: 40%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-}
-
-.container_content_card {
-  width: 100%;
-  height: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 28px;
-  overflow: hidden;
-  color: white;
-  overflow-wrap: break-word;
-}
-
-.val {
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  color: rgb(64, 64, 216);
+  font-weight: 700;
 }
