--- a/src/pages/endProcess/style.css
+++ b/src/pages/endProcess/style.css
@@ -1,31 +1,57 @@
-
-.container_page_endProcess{
-    min-height: 70vh;
-    height: auto;
-    width: 100%;
-    padding: 30px 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.container_page_endProcess {
+  min-height: 50vh;
+  height: auto;
+  width: 100%;
+  margin-top: 10%;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
-.container_page_title_endProcess{
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    border-bottom: 1px solid  rgb(64, 64, 216);
-    color: rgb(64, 64, 216);
-    font-size: 13px;
-    margin-bottom: 3%;
-    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+.container_page_title_endProcess {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  color: rgb(64, 64, 216);
+  font-size: 13px;
+  margin-bottom: 3%;
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
 }
-.container_cards_horizontal{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
-    height: auto;
-    justify-content: center;
-    width: 90%;
+.container_cards_horizontal {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 90%;
+  padding-bottom: 4%;
 }
 
+.title {
+  font-size: 28px !important;
+  padding-bottom: 10px;
+}
+
+.backButton {
+  margin-right: 20px !important;
+}
+
+.cardLog {
+  flex: 0 0 calc(33.33% - 20px);
+  max-width: calc(33.33% - 20px);
+  padding: 15px;
+  box-sizing: border-box;
+
+  height: 200px;
+
+  @media (max-width: 1500px) {
+    height: 200px;
+  }
+
+  @media (max-width: 992px) {
+    height: 210px;
+  }
+}
+
+.centered_cards {
+  display: flex;
+  justify-content: center;
+}
