feat(front-react): updating Dashboard page, menu filter and more

--- a/src/pages/dashboard/style.css
+++ b/src/pages/dashboard/style.css
@@ -1,112 +1,172 @@
-.container_page_dashboard{
-    min-height: 80vh;
-    width: 100vw;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.container_page_dashboard {
+  min-height: 80vh;
+  width: 100vw;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
-.container_menu_header_dashboard{
-    height: 50px;
-    width: 88%;
-    display: flex;
-    margin-top: 40px;
-    margin-bottom: 2%;
+.container_menu_header_dashboard {
+  height: 50px;
+  width: 92%;
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 2%;
 }
-.container_menu_dashboard{
-    width: 70%;
-    height: 100%;
-    display: flex;
-    color:rgb(64, 64, 216);
-    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+.container_menu_dashboard {
+  width: 85%;
+  height: 100%;
+  display: flex;
+  color: rgb(64, 64, 216);
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
 }
-.title_menu_dashboard{
-    margin: 0;
+.title_menu_dashboard {
+  margin: 0;
 }
-.container_date_dashboard{
-    width: 29%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    font-size: 12px;
-    color:rgb(64, 64, 216);
-    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
-    padding: 0;
+.container_date_dashboard {
+  width: 29%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  font-size: 12px;
+  color: rgb(64, 64, 216);
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+  padding: 0;
 }
-.date_dashboard{
-    margin: 0;
-    margin-top: 8px;
+.date_dashboard {
+  margin: 0;
+  margin-top: 8px;
 }
-.container_cards_dasboard{
-    width: 99%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 40px;
+.container_cards_dasboard {
+  width: 99%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 70px;
 }
-.container_graph{
-    display: flex;
-    margin-top: 100px;
-    width: 99%;
-    justify-content: center;
+.container_graph {
+  display: flex;
+  margin-top: 100px;
+  width: 99%;
+  justify-content: center;
 }
-.content_graph{
-    margin-right: 5%;
-    color: rgb(64, 64, 216);
-    font-family: "Mulish",sans-serif;
-    font-size: 13px;
+.content_graph {
+  margin-right: 5%;
+  color: rgb(64, 64, 216);
+  font-family: "Mulish", sans-serif;
+  font-size: 13px;
 }
-.title_graph{
-    margin: 0;
-    margin-bottom: 20px;
+.title_graph {
+  margin: 0;
+  margin-bottom: 20px;
 }
-.container_input_date_dashboard{
-    border: 0;
-    color: rgb(64, 64, 216);
-    border-bottom: 1px solid rgb(64, 64, 216);
-    height: 27px;
+.container_input_date_dashboard {
+  border-color: rgb(64, 64, 216) !important;
+  color: rgb(64, 64, 216);
+  border-bottom: 1px solid rgb(64, 64, 216);
+  height: 27px;
 }
-.container_card_dashboard_erro{
-    width: 40%;
-    height: 80px;
-    border:1px solid rgb(64, 64, 216) ;
-    border-radius: 10px;
-    overflow: hidden;
-    margin-inline: 1%;
-    margin-bottom: 1%;
-    font-size: 28px;
-    display: flex;
+.container_card_dashboard_erro {
+  width: 40%;
+  height: 120px;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-inline: 1%;
+  margin-bottom: 1%;
+  font-size: 28px;
+  display: flex;
 }
-.container_card_menu_dashboard_erro{
-    height: 100%;
-    width: 25%;
-    background-color:rgb(64, 64, 216);
-    color: white;
-    font-size: 9px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+.container_card_menu_dashboard_erro {
+  height: 100%;
+  width: 25%;
+  background-color: #e8405e;
+  color: white;
+  font-size: 9px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
 }
-.title_card_dashboard_erro{
-    margin: 0;
-    text-align: center;
+.title_card_dashboard_erro {
+  margin: 0;
+  text-align: center;
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", "Helvetica", sans-serif;
+  font-weight: 700 !important;
 }
-.content_card_dashboard_erro{
-    width: 75%;
-    display: flex;
-    height: 100%;
-    color: rgb(64, 64, 216);
-    justify-content: center;
-    align-items: start;
-    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
-    overflow: auto;
-    overflow-wrap: break-word; 
-    flex-direction: column;
-    font-size: 15px;
-    padding-left: 10px;
+.content_card_dashboard_erro {
+  width: 75%;
+  display: flex;
+  height: 100%;
+  background-color: #f3f3ff;
+  color: rgb(64, 64, 216);
+  justify-content: center;
+  align-items: start;
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+  overflow: auto;
+  overflow-wrap: break-word;
+  flex-direction: column;
+  font-size: 15px;
+  padding-left: 10px;
 }
-.val_card_dashboard_erro{
-    margin-top: 5px;
+.val_card_dashboard_erro {
+  margin-top: 5px;
+}
+
+.back_button_container {
+  margin-left: 0px;
+}
+
+.calendar-text {
+  background-image: url("assets/calendar.png");
+  background-size: cover;
+  color: #fff;
+  padding: 20px;
+  position: relative;
+  z-index: 1;
+  font-size: 18px;
+}
+
+.shape-container {
+  position: relative;
+  display: inline-block;
+}
+
+.shape-container::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -20px;
+  transform: translateY(-50%);
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-right: 20px solid #333;
+  z-index: 2;
+}
+
+.text_calendar {
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", "Helvetica", "sans-serif";
+  color: rgb(64, 64, 216);
+  font-weight: 700;
+}
+
+.MuiInputBase-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+  border-color: rgb(64, 64, 216) !important;
+}
+
+.MuiPickersDay-root.Mui-selected {
+  background-color: rgb(64, 64, 216) !important;
+}
+
+.MuiPickersYear-yearButton.Mui-selected {
+  background-color: rgb(64, 64, 216) !important;
+}
+
+.Mui-selected.select_dashboard {
+  background-color: rgb(64, 64, 216) !important;
+  color: white !important;
+}
+
+.MuiInputBase-input.MuiOutlinedInput-input {
+  font-size: 18px !important;
 }
