--- a/src/pages/dashboard/style.css
+++ b/src/pages/dashboard/style.css
@@ -171,3 +171,10 @@
 .MuiInputBase-input.MuiOutlinedInput-input {
   font-size: 18px !important;
 }
+
+.custom-tooltip {
+  background-color: #f3f3ff;
+  padding: 8px 12px;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
