--- a/src/components/selectDashboard/style.css
+++ b/src/components/selectDashboard/style.css
@@ -1,15 +1,3 @@
-/* .input_select_dashboard {
-  width: 10%;
-  margin-inline: 5%;
-  height: 30px;
-  background-color: transparent;
-  border: 0;
-  color: rgb(64, 64, 216);
-  font-size: 14px;
-  display: flex;
-  text-align: center;
-  border-bottom: 1px solid rgb(64, 64, 216);
-} */
 .select_dashboard {
   outline: 0;
   border: 0;
@@ -23,10 +11,15 @@
 }
 
 .input_select_dashboard {
-  width: 200px;
+  min-width: 200px;
   border-radius: 4px;
   padding: 8px;
   height: 56px;
-  margin-right: 50px;
   font-size: 18px !important;
+}
+
+.label_select_dashboard {
+  color: rgb(64, 64, 216) !important;
+  font-size: 14px;
+  background-color: #ffffff;
 }
