feat(front-react): updates front and logic front

--- a/src/pages/endProcess/style.css
+++ b/src/pages/endProcess/style.css
@@ -31,7 +31,8 @@
 }
 
 .backButton {
-  margin-right: 20px !important;
+  margin-top: 20px !important;
+  margin-left: 20px !important;
 }
 
 .cardLog {
